Fix image aspect ratio and width, make description text overflow hidden with ellipsis

--- a/src/components/EventsInfo/EventsInfo.scss
+++ b/src/components/EventsInfo/EventsInfo.scss
@@ -24,19 +24,30 @@
     }
   }
 
+  &__container {
+    margin: 10px 0 70px;
+    display: flex;
+    width: 78.4vw;
+    height: 12vw;
+    gap: 1vw;
+  }
+
   &__thumbnail {
-    width: 100%;
-    height: 100%;
     margin-right: 15px;
 
     &-img {
-      width: 100%;
-      height: 100%;
+      object-fit: fill;
+      width: 300px;
+      height: 200px;
       border-radius: 8px;
     }
   }
 
   &__details {
+    width: 510px;
+    height: 190px;
+    overflow: hidden;
+
     &-title {
       @include SubHeader;
     }
@@ -44,6 +55,12 @@
     &-description {
       @include Body;
       margin-top: 0.8vw;
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 4; // max number of lines displayed
+      -webkit-box-orient: vertical;
     }
 
     &-datetime {
