--- a/src/pages/EventsPage/EventsPage.scss
+++ b/src/pages/EventsPage/EventsPage.scss
@@ -15,7 +15,7 @@
   font-family: Gilroy;
 
   &__container {
-    padding: 15.14vw 10.8vw 0 10.8vw;
+    padding: 7vw 10.8vw 0 10.8vw;
     height: 100%;
   }
 
